# FireSimulation

./: AppWidget.cpp  AppWidget.h  CMakeLists.txt  FireSimulation.cpp  FireSimulation.h  FireSimulation_en_FI.ts  README.md  build-and-run.sh  color.json  colors.h  cvmatandqimage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
